--- a/pom.xml
+++ b/pom.xml
@@ -19,19 +19,9 @@
             <version>2.53.0</version>
         </dependency>
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server</artifactId>
-            <version>2.44.0</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.easytesting</groupId>
-            <artifactId>fest-assert-core</artifactId>
-            <version>2.0M6</version>
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
@@ -41,9 +31,9 @@
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
-            <artifactId>cucumber-jvm</artifactId>
+            <artifactId>cucumber-junit</artifactId>
             <version>1.0.11</version>
-            <type>pom</type>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
